--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </article><!-- .intro -->
         <section class="test-area">
             <div id="origin-text">
-                <p>The text to test.</p>
+                <p>Have you ever dreamed of running a bookshop? You can have a go for a week at the Open Book Store in Wigton, Scotland. In fact, if you book a holiday at the self-catering flat on Airbnb, you also have to work for 40 hours in the bookshop downstairs. A week in the flat costs £150. You won’t get paid for working, but you can use your own creative ideas to sell books and gain valuable experience. Wigton is Scotland’s national book town and this new venture is attracting interest from all over the world.</p>
             </div><!-- #origin-text -->
 
             <div class="test-wrapper">
